Bug fix: Footer would disappear behind the update dish form, fixed the css.

--- a/oComponents/AddDishForm/Components/Form/Form.module.css
+++ b/oComponents/AddDishForm/Components/Form/Form.module.css
@@ -1,4 +1,9 @@
+.main {
+  margin-top: 50px;
+}
+
 .spacer {
+  display: inline;
   height: 1px;
   margin-top: 50px;
 }
