--- a/oComponents/DishPage/DishPage.module.css
+++ b/oComponents/DishPage/DishPage.module.css
@@ -1,3 +1,13 @@
+/* .main {
+  display: block;
+  position: relative;
+} */
+
+.buttonContainer {
+  display: block !important;
+  margin-bottom: 50px;
+}
+
 .buttonDelete {
   float: right !important;
   width: 35% !important;
